Fixed broken CSS for search results and wrong title on frontpage

--- a/src/theme/DocPage/styles.module.css
+++ b/src/theme/DocPage/styles.module.css
@@ -18,7 +18,6 @@
   position: -webkit-sticky;
   max-height: 100vh;
   top: 0;
-  overflow-y: auto;
   z-index: 999;
 }
 
