--- a/src/theme/SearchBar/styles.module.css
+++ b/src/theme/SearchBar/styles.module.css
@@ -3,6 +3,7 @@
     display: block;
     width: 100%;
     box-sizing: border-box;
+    margin-bottom: 8px;
 }
 
 .search__input {
